[gd_scene load_steps=11 format=3 uid="uid://koopgui2ptar"]

[ext_resource type="Script" uid="uid://bdltsxbh84nou" path="res://Scripts/finish.gd" id="1_3okuf"]
[ext_resource type="Script" uid="uid://brhhsoussfjqr" path="res://Scripts/Button/no_button.gd" id="2_6pwwv"]
[ext_resource type="Script" uid="uid://cj36nau0ud63c" path="res://Scripts/Button/yes_button.gd" id="3_xyssb"]

[sub_resource type="Gradient" id="Gradient_j5brx"]
offsets = PackedFloat32Array(0, 0.508197, 1)
colors = PackedColorArray(0.403646, 0.0377572, 0.300815, 1, 0.773797, 0.493155, 0.657141, 1, 0.785887, 0.934214, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_syfuq"]
gradient = SubResource("Gradient_j5brx")
fill_from = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_75vbm"]
texture = SubResource("GradientTexture2D_syfuq")
modulate_color = Color(0.289285, 0.537531, 0.947917, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3okuf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6pwwv"]

[sub_resource type="LabelSettings" id="LabelSettings_rcnyn"]
font_size = 40
outline_size = 7

[sub_resource type="LabelSettings" id="LabelSettings_fixve"]
font_size = 20

[node name="Finish" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3okuf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_75vbm")

[node name="YesButton" type="Button" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 170.0
offset_right = 212.0
offset_bottom = 227.0
focus_neighbor_left = NodePath("../NoButton")
focus_neighbor_right = NodePath("../NoButton")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../NoButton")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_3okuf")
text = "YES"
flat = true
script = ExtResource("2_6pwwv")

[node name="ColorRect_No" type="ColorRect" parent="YesButton"]
layout_mode = 0
offset_left = 16.0
offset_top = 38.0
offset_right = 51.0
offset_bottom = 40.0

[node name="NoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 170.0
offset_right = 269.0
offset_bottom = 227.0
focus_neighbor_left = NodePath("../YesButton")
focus_neighbor_right = NodePath("../YesButton")
focus_next = NodePath("../YesButton")
focus_previous = NodePath("../YesButton")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_6pwwv")
text = "NO"
flat = true
script = ExtResource("3_xyssb")

[node name="ColorRect_Yes" type="ColorRect" parent="NoButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 38.0
offset_right = 50.0
offset_bottom = 40.0

[node name="YouWin" type="Label" parent="."]
layout_mode = 0
offset_left = -23.0
offset_top = 20.0
offset_right = 435.0
offset_bottom = 130.0
text = "YOU WIN !"
label_settings = SubResource("LabelSettings_rcnyn")
horizontal_alignment = 1

[node name="PlayAgain" type="Label" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = 148.0
offset_right = 438.0
offset_bottom = 258.0
text = "PLAY AGAIN ?"
label_settings = SubResource("LabelSettings_fixve")
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -86.0
offset_top = 10.0
offset_right = 501.0
offset_bottom = 209.0
theme_override_font_sizes/font_size = 20
text = "Your time : "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_no_button_pressed"]
